--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simplifying the Complex: A Refined Development Workflow</title>
+    <title>Simplifying the Complexity: A Refined Development Workflow</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -73,7 +73,7 @@
 
         <!-- Header -->
         <header class="text-center my-12">
-            <h1 class="text-4xl md:text-6xl font-black text-[#006494] leading-tight">From Chaos to Clarity</h1>
+            <h1 class="text-4xl md:text-6xl font-black text-[#006494] leading-tight">Simplifying the Complexity</h1>
             <p class="text-xl md:text-2xl mt-4 text-[#0582CA]">A Blueprint for a Modern Support-Driven Development Workflow</p>
         </header>
 
